--- a/openchrom/plugins/net.openchrom.xxd.converter.supplier.animl/src/net/openchrom/xxd/converter/supplier/animl/l10n/messages.properties
+++ b/openchrom/plugins/net.openchrom.xxd.converter.supplier.animl/src/net/openchrom/xxd/converter/supplier/animl/l10n/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2015, 2017 Lablicate GmbH.
+# Copyright (c) 2024 Lablicate GmbH.
 #
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
@@ -7,6 +7,8 @@
 # http://www.eclipse.org/legal/epl-v10.html
 #
 # Contributors:
-#     Dr. Philip Wenig - initial API and implementation
+#     Matthias Mailänder - initial API and implementation
 ###############################################################################
 #Properties file
+importChromatogram = Import AnIML Chromatogram
+exportChromatogram = Export AnIML Chromatogram
